grammer.txt
Program -> "begin" "{" StatementList "}" "end"

StatementList -> Statement*

Statement -> Assignment 
          | Conditional 
          | PrintStatement 
          | Pass 
          | Return 
          | LoopControl 
          | While 
          | For

Declaration -> "DataType" Identifier ;
             | "DataType" Identifier "=" value ";"
             | "DataType" Identifier "=" Identifier ";"

DataType -> "int" | "float" | "string"

Assignment -> Identifier "=" NUMBER ";" 
            | Identifier "=" Expression ";" 
            | Identifier "=" Identifier ";"
            | Identifier CompoundOperator value ";"
            | Identifier CompoundOperator Identifier ";"

Conditional -> "if" "(" BooleanExpression ")" "{" StatementList "}" 
             ["elif" "(" BooleanExpression ")" "{" StatementList "}"]* 
             ["else" "{" StatementList "}"]

BooleanExpression -> Expression RelationalOperator Expression 
                  | BooleanExpression "and" BooleanExpression 
                  | BooleanExpression "or" BooleanExpression 
                  | "not" BooleanExpression

PrintStatement -> "print" "(" Identifier ")" ";"
                | "print" "(" String ")" ";"

While -> "while" "(" BooleanExpression ")" "{" StatementList "}"

For -> "for" Identifier "in" TargetList "{" StatementList "}"

Return -> "return" [ExpressionList] ";"

LoopControl -> "break" ";" 
            | "continue" ";"

Expression -> Term (Operator Term)*

Term -> Identifier 
     | NUMBER
     | STRING

Operator -> "+" 
         | "-" 
         | "*" 
         | "/" 
         | "%" 
         | "="

RelationalOperator -> "==" | "!=" | "<" | ">" | "<=" | ">="

Identifier -> [A-Za-z] [A-Za-z0-9]*

NUMBER -> [0-9]+

STRING -> '"' [A-Za-z0-9 ]* '"'

CompoundOperator -> "+=" | "-=" | "*=" | "/=" | "%="

ExpressionList -> Expression ("," Expression)*

TargetList -> "[" value ("," value)* "]"

value -> NUMBER | STRING
